assets/themes/zeppelin/css/style.css
/* ... */
.blogList {
  min-height: 25px;
  margin-bottom: 22px;
  border-bottom: 1px solid #EFEFEF;
  padding-bottom: 22px;
}

.blogList .blogHead {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  height: 30px;
}

.blogList .blogTitle {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.blogList .blogTitle a {
  font-size: 24px;
  font-weight: 700;
  letter-spacing: -.02em;
  line-height: 1.2;
  color: rgba(0,0,0,.7);
  margin-top: 5px;
  margin-bottom: 3px;
}

.blogList .blogDescription {
  margin-top: 14px;
  margin-bottom: 14px;
  letter-spacing: -.02em;
  font-weight: 200;
  font-size: 16px;
  line-height: 1.3;
  color: #000;
}

.blogList .blogAuthor {
  font-weight: 200;
  color: #00ab6b;
  float: left;
}

.blogList .blogPublishDate::before {
  content: '\00B7';
}

.blogList .blogPublishDate {
  font-weight: 200;
  color: rgba(0,0,0,.44);
}

/* Demo img thumbnail */
.thumbnail {
  background-color: transparent;
  border: none;
  display: inline;
}

.thumbnail img {
  margin: 0 5px 5px 0;
}

.thumbnail:hover {
  background-color: transparent;
}

/* For enlarged image*/
.thumbnail span img {
  border-width: 0;
  padding: 2px;
  max-width: 55vw;
}

.viz .thumbnail span {
  position: absolute;
  padding: 5px;
  left: -55vw;
  visibility: hidden;
  color: black;
  text-decoration: none;
  width: 30px;
}

.viz .thumbnail:hover span {
  visibility: visible;
  top: 0;
  left: 320px; /*position where enlarged image should offset horizontally */
  z-index: 50;
}

.multi .thumbnail span {
  position: absolute;
  padding: 5px;
  left: -12vw;
  top: 160px;
  visibility: hidden;
  color: black;
  text-decoration: none;
  width: 30px;
}

.multi .thumbnail:hover span {
  visibility: visible;
  z-index: 50;
}

.personal .thumbnail span {
  position: absolute;
  padding: 5px;
  left: -55vw;
  visibility: hidden;
  color: black;
  text-decoration: none;
  width: 30px;
}

.personal .thumbnail:hover span {
  visibility: visible;
  top: 0;
  z-index: 50;
}


/* Custom, iPhone Retina */
@media only screen and (max-width: 480px) {
  .jumbotron h1 {
    display: none;
  }

  .navbar-brand small {
    display: none;
    color: white;
  }

  .jumbotron .description {
    font-size: 22px;
  }
}

@media only screen and (max-width: 768px) {
  .navbar .navbar-brand {
    padding-bottom: 0;
  }

  /* For enlarged image*/
  .thumbnail span img {
    max-width: 86vw !important;
  }

  .viz .thumbnail span {
    left: 0;
  }

  .viz .thumbnail:hover span {
    top: 16vh;
    left: 0;
  }

  .multi .thumbnail span {
    left: 0;
    top: 16vh;
  }

  .personal .thumbnail span {
    left: 0;
  }

  .personal .thumbnail:hover span {
    top: 16vh;
    left: 0;
  }

  .blog .container {
    width: 80vw;
  }

  .navbar-inverse .navbar-nav > li > a {
    font-size: 15px;
  }

  .navbar-nav .open .dropdown-menu {
    font-size: 14px;
  }

  .docs .dropdown-menu b {
    text-shadow: 1px 1px #353131;
    color: #FFF;
    font-size: 15px;
  }

  .navbar-collapse.in {
    overflow-y: auto;
  }

  .navbar-inverse .navbar-collapse.in .navbar-nav .dropdown-menu > li > a {
    color: #FFF !important;
  }

  .navbar-inverse .navbar-collapse.in .navbar-nav .divider {
      background: #286090;
  }

  .new h4 {
      padding: 18px 0 0 10px;
  }
}

@media only screen
and (min-width: 768px)
and (max-width: 996px) {
  .navbar-brand small {
    display: none;
  }

  .navbar-collapse.collapse {
    padding-right: 0;
  }

  .navbar-header {
    float: none;
  }

  .navbar-toggle {
    display: block;
  }

  .navbar-fixed-top {
    top: 0;
    border-width: 0 0 1px;
  }

  .navbar-collapse {
    border-top: 1px solid transparent;
    box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
  }

  .navbar-collapse.collapse {
    display: none!important;
  }

  .navbar-nav {
    float: none!important;
    margin-top: 7.5px;
  }

  .navbar-nav>li {
    float: none;
  }

  .navbar-nav>li>a {
    padding-top: 10px;
    padding-bottom: 10px;
  }

  .navbar-collapse.in {
      overflow-y: auto;
  }

  .navbar-inverse .navbar-collapse.in .navbar-nav .dropdown-menu > li > a {
    color: #FFF !important;
  }

  .navbar-inverse .navbar-collapse.in .navbar-nav .divider {
      background: #286090;
  }

  .collapse.in{
    display:block !important;
  }

  .navbar-nav .open .dropdown-menu {
    position: static;
    float: none;
    width: 95%;
    margin-top: 0;
    background-color: transparent;
    border: 0;
    box-shadow: none;
    font-size: 14px;
  }

  .docs .dropdown-menu b {
    text-shadow: 1px 1px #353131;
    color: #FFF;
    font-size: 15px;
  }

  .navbar-inverse .navbar-nav > li > a {
    margin-left: -12px;
    font-size: 18px;
  }
}

@media only screen
and (min-width: 768px)
and (max-width: 1024px) {
  .navbar-brand small {
    display: none;
  }

  .navbar-collapse.collapse {
    padding-right: 0;
  }
}

/* master branch docs dropdown menu */
#menu .dropdown-menu li span {
  padding: 3px 10px 10px 10px;
  font-size: 13px;
}

#menu .caret {
  border-top-color: white;
  border-bottom-color: white;
}

#menu .open .caret {
  border-top-color: #428bca;
  border-bottom-color: #428bca;
}

#menu .navbar-brand {
  margin-right: 50px;
}

/* gh-pages branch docs dropdown menu */
.docs .dropdown-menu {
  left: 0;
  right: auto;
}

.docs .dropdown-menu li span {
  font-family: "Roboto", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  padding: 12px 10px 12px 15px;
  font-size: 15px;
  font-weight: 300;
}

.docs .title {
  color: #3071a9;
}

.docs .dropdown-menu li a {
  padding-left: 30px;
}

/*
** Media Queries CSS
*/

@media (max-width: 991px) {
  .navbar-inverse .navbar-brand {
    font-size: 24px;
  }

  .content {
    padding: 2rem 4rem;
  }
}

@media only screen
and (min-width: 735px)
and (max-width: 991px) {
  .container .zeppelin,
  .container .zeppelin2 {
    background-size: 56%;
  }
}
/* ... */

